@@ -174,15 +174,15 @@ if ($db->inactive != true) // Before DB is installed, don't try to setup userinf
 }
 
 // Initialize the Plugin System.
-PluginSystem::Initialize ($db);
+BntPluginSystem::Initialize ($db);
 
 // Load all Plugins.
-PluginSystem::LoadPlugins ();
+BntPluginSystem::LoadPlugins ();
 
 // Ok, here we raise EVENT_TICK which is called every page load, this saves us from having to add new lines to support new features.
 // This is used for ingame stuff and Plug-ins that need to be called on every page load.
 // May need to change array(time()) to have extra info, but the current suits us fine for now.
-PluginSystem::RaiseEvent (EVENT_TICK, array (time ()));
+BntPluginSystem::RaiseEvent (EVENT_TICK, array (time ()));
 
 // We need language variables in every page, and a language setting for them.
 global $lang, $langvars;
